--- a/Financial Control/project/.env
+++ b/Financial Control/project/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:root@localhost:5432/financialdb?schema=public"
+JSON_TOKEN_KEY="m1./DssNcgIRXMEOjzfqqc2a$gNrAamrkqSTkj$l.l4wqrIS2dPZkMm10$pI"
