--- a/Financial Control/project/package.json
+++ b/Financial Control/project/package.json
@@ -45,6 +45,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "express": "^4.18.2",
     "install": "^0.13.0",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.2",
