--- a/Financial Control/project/.env
+++ b/Financial Control/project/.env
@@ -6,3 +6,7 @@
 
 DATABASE_URL="postgresql://postgres:root@localhost:5432/financialdb?schema=public"
 JSON_TOKEN_KEY="m1./DssNcgIRXMEOjzfqqc2a$gNrAamrkqSTkj$l.l4wqrIS2dPZkMm10$pI"
+EMAIL_MAILER="no.reply.login.authenticator@gmail.com"
+PASSWORD_MAILER="uhbadvlnqpfcrytd"
+HOST_MAILER="smtp.gmail.com"
+PORT_MAILER="465"
