--- a/Financial Control/project/package.json
+++ b/Financial Control/project/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "bcryptjs": "^2.4.3",
+    "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -31,12 +32,13 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.5.0",
     "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.13",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -50,7 +52,7 @@
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.2",
     "prettier": "^3.0.0",
-    "prisma": "^5.3.1",
+    "prisma": "^5.5.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
